--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/Raychee/catalyst#readme",
   "dependencies": {
-    "agenda": "file:./lib/agenda",
+    "agenda": "git+https://github.com/hellohupu/agenda.git#feature/catatechcn",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link": "^1.2.12",
