--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/Raychee/catalyst#readme",
   "dependencies": {
-    "@raychee/utils": "^0.1.6",
+    "@raychee/utils": "^0.1.10",
     "agenda": "git+https://github.com/hellohupu/agenda.git#feature/catatechcn",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
@@ -26,7 +26,8 @@
     "apollo-link-persisted-queries": "^0.2.2",
     "apollo-link-retry": "^2.2.15",
     "apollo-server-koa": "^2.7.0",
-    "dataloader": "^1.4.0",
+    "cron": "^1.7.2",
+    "debug": "^4.1.1",
     "deep-object-diff": "^1.1.0",
     "graphql": "^14.4.2",
     "graphql-augment": "^0.3.29",
@@ -36,16 +37,23 @@
     "json-stable-stringify": "^1.0.1",
     "koa": "^2.7.0",
     "lodash": "^4.17.15",
-    "mongodb": "^3.3.5",
+    "moment": "^2.24.0",
+    "mongodb": "^3.4.1",
     "neo4j-driver": "^4.0.0",
     "node-fetch": "^2.6.0",
     "puppeteer-core": "^1.15.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
+    "supports-color": "^7.1.0",
     "tough-cookie": "^3.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "eslint": "^6.7.2"
+    "@shelf/jest-mongodb": "^1.1.3",
+    "eslint": "^6.7.2",
+    "jest": "^24.9.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
