--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.4.43",
+  "version": "0.4.44",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/Raychee/catalyst#readme",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.6.0",
     "@raychee/utils": "^0.1.18",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
