--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.4.60",
+  "version": "0.4.61",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -20,11 +20,8 @@
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link": "^1.2.12",
-    "apollo-link-context": "^1.0.18",
-    "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.15",
     "apollo-link-persisted-queries": "^0.2.2",
-    "apollo-link-retry": "^2.2.15",
     "apollo-server-koa": "^2.7.0",
     "cron": "^1.7.2",
     "debug": "^4.1.1",
@@ -34,7 +31,6 @@
     "graphql-augment": "^0.5.4",
     "graphql-tag": "latest",
     "graphql-tools": "latest",
-    "graphql-type-json": "^0.3.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.15",
@@ -42,7 +38,7 @@
     "mongodb": "^3.3.0",
     "neo4j-driver": "^4.0.0",
     "node-fetch": "^2.6.0",
-    "puppeteer-core": "chrome-stable",
+    "puppeteer-core": "chrome-81",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "supports-color": "^7.1.0",
