--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.4.62",
+  "version": "0.4.63",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -15,35 +15,18 @@
   },
   "homepage": "https://github.com/Raychee/catalyst#readme",
   "dependencies": {
-    "@elastic/elasticsearch": "^7.6.0",
     "@raychee/utils": "^0.1.19",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.3",
-    "apollo-link": "^1.2.12",
-    "apollo-link-http": "^1.5.15",
-    "apollo-link-persisted-queries": "^0.2.2",
     "apollo-server-koa": "^2.7.0",
     "cron": "^1.7.2",
     "debug": "^4.1.1",
-    "deep-object-diff": "^1.1.0",
     "fast-json-stable-stringify": "^2.1.0",
-    "graphql": "^14.4.2",
     "graphql-augment": "^0.5.4",
-    "graphql-tag": "latest",
-    "graphql-tools": "latest",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb": "^3.3.0",
-    "neo4j-driver": "^4.0.0",
-    "node-fetch": "^2.6.0",
-    "puppeteer-core": "chrome-81",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
-    "supports-color": "^7.1.0",
-    "tough-cookie": "^3.0.1",
-    "uuid": "^3.3.2"
+    "supports-color": "^7.1.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.3",
