--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.4.64",
+  "version": "0.4.65",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/Raychee/catalyst#readme",
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "@raychee/utils": "^0.1.19",
     "apollo-server-koa": "^2.7.0",
     "cron": "^1.7.2",
