--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.4.93",
+  "version": "0.4.94",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/Raychee/catalyst.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Raychee",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Raychee/catalyst/issues"
