--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.4.98",
+  "version": "0.4.99",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -24,15 +24,17 @@
     "graphql-augment": "^0.7.4",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-compress": "^5.0.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb": "^3.3.0",
     "supports-color": "^7.1.0"
   },
   "devDependencies": {
+    "@jest/globals": "^26.2.0",
     "@shelf/jest-mongodb": "^1.1.5",
     "eslint": "^6.7.2",
-    "jest": "^26.1.0"
+    "jest": "^26.2.2"
   },
   "scripts": {
     "test": "jest"
