--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raychee/catalyst",
-  "version": "0.4.105",
+  "version": "0.4.106",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -26,6 +26,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.0.1",
     "lodash": "^4.17.15",
+    "micromatch": "^4.0.2",
     "moment": "^2.24.0",
     "mongodb": "^3.3.0",
     "supports-color": "^7.1.0"
